--- a/public/index.html
+++ b/public/index.html
@@ -1,75 +1,34 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <script src="libs/jquery/dist/jquery.min.js"></script>
-    <script>
-        function realizaProceso(valorCaja1, valorCaja2){
-            var parametros = {
-                "email" : valorCaja1,
-                "pass" : valorCaja2
-            };
-            $.ajax({
-                data:  parametros,
-                url:   'http://localhost:8080/api/login',
-                type:  'post',
-                beforeSend: function () {
-                    $("#resultado").html("Procesando, espere por favor...");
-                },
-                success:  function (response) {
-                    $("#resultado").html(response.token);
-                }
-            });
-        }
+    <base href="/">
 
-        function procesoConTokens(){
-            /*var parametros = {
-                "email" : valorCaja1,
-                "pass" : valorCaja2
-            };*/
-            $.ajax({
-                url:   'http://localhost:8080/api/getUsers',
-                type:  'get',
-                headers: {
-                    "authorization": $("#resultado").html(),
-                    "user_id": "rgcmb@hotmail.com"
-                },
-                beforeSend: function () {
-                    $("#resultado2").html("Procesando, espere por favor...");
-                },
-                success:  function (response) {
-                    $("#resultado2").html(response);
-                }
-            });
-        }
-    </script>
+    <title>Starter Node and Angular</title>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css"> <!-- custom styles -->
+
+    <!-- JS -->
+    <script src="libs/angular/angular.min.js"></script>
+    <script src="libs/angular-route/angular-route.min.js"></script>
+
+    <!-- ANGULAR CUSTOM -->
+    <script src="js/controllers/MainCtrl.js"></script>
+    <script src="js/services/MainService.js"></script>
+    <script src="js/appRoutes.js"></script>
+    <script src="js/app.js"></script>
 </head>
-<body>
-<!--
-Introduce valor 1
+<body ng-app="sampleApp" ng-controller="NerdController">
+<div class="container">
 
-<input type="text" name="caja_texto" id="valor1" value="0"/>
-
-
-Introduce valor 2
-
-<input type="text" name="caja_texto" id="valor2" value="0"/>
-
-Realiza suma
-
-<input type="button" href="javascript:;" onclick="realizaProceso($('#valor1').val(), $('#valor2').val());return false;" value="Calcula"/>
-
-<br/>
-
-Resultado: <span id="resultado">aa.aa.aa</span>
-
-<input type="button" href="javascript:;" onclick="procesoConTokens();return false;" value="Tokens prob"/>
-
-Resultado: <span id="resultado2"></span>
--->
 <h1>Web en construcción</h1>
-<img src="http://lh4.ggpht.com/-jt4oVm0tuT0/TuFZixOPXPI/AAAAAAAAG80/An9i_7vsqlw/gato%252520pianista%252520%2525281%252529_thumb.gif?imgmax=800">
 
+
+    <!-- ANGULAR DYNAMIC CONTENT -->
+    <div ng-view></div>
+
+</div>
 </body>
 </html>
