--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html ng-app="FinalApp" lang="en">
 <head>
     <meta charset="UTF-8">
     <base href="/">
@@ -15,12 +15,10 @@
     <script src="libs/angular-route/angular-route.min.js"></script>
 
     <!-- ANGULAR CUSTOM -->
-    <script src="js/controllers/MainCtrl.js"></script>
-    <script src="js/services/MainService.js"></script>
-    <script src="js/appRoutes.js"></script>
-    <script src="js/app.js"></script>
+    <script src="app/app.js"></script>
+    <script src="app/controllers.js"></script>
 </head>
-<body ng-app="sampleApp" ng-controller="NerdController">
+
 <div class="container">
 
 <h1>Web en construcción</h1>
