--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
     <!-- ANGULAR CUSTOM -->
     <script src="app/app.js"></script>
-    <script src="app/controllers.js"></script>
+    <script src="app/controllers/controllers.js"></script>
 </head>
 
 <div class="container">
