--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <base href="/">
 
-    <title>Starter Node and Angular</title>
+    <title>OPbird</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css"> <!-- custom styles -->
+    <!--<link rel="stylesheet" href="css/style.css"> <!-- custom styles -->
 
     <!-- JS -->
     <script src="libs/angular/angular.min.js"></script>
@@ -16,12 +16,13 @@
 
     <!-- ANGULAR CUSTOM -->
     <script src="app/app.js"></script>
-    <script src="app/controllers/mainController.js"></script>
+    <script src="app/controllers/loginController.js"></script>
+    <script src="app/controllers/registerController.js"></script>
 </head>
 
 <div class="container">
 
-<h1>Web en construcción</h1>
+<h1>OPbird</h1>
 
 
     <!-- ANGULAR DYNAMIC CONTENT -->
