--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style/style.css";
     <!--<link rel="stylesheet" href="css/style.css"> <!-- custom styles -->
 
     <!-- JS -->
@@ -27,7 +28,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#/home">WebSiteName</a>
+            <a class="navbar-brand" href="#/home"><img class="img-responsive" alt="OPbird" src="images/logo.png"></a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
