--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style/style.css";
+    <link rel="stylesheet" href="style/style.css">
     <!--<link rel="stylesheet" href="css/style.css"> <!-- custom styles -->
 
     <!-- JS -->
