--- a/public/index.html
+++ b/public/index.html
@@ -14,12 +14,13 @@
     <!-- JS -->
     <script src="libs/angular/angular.min.js"></script>
     <script src="libs/angular-route/angular-route.min.js"></script>
+    <script src="libs/angular-local-storage/dist/angular-local-storage.js"></script>
     <script src="libs/jquery/dist/jquery.min.js"></script>
-
     <!-- ANGULAR CUSTOM -->
     <script src="app/app.js"></script>
     <script src="app/controllers/loginCtlr.js"></script>
     <script src="app/controllers/registerCtlr.js"></script>
+    <script src="app/controllers/mainCtlr.js"></script>
 </head>
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
