--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,10 @@
     <script src="libs/angular-local-storage/dist/angular-local-storage.js"></script>
     <script src="libs/jquery/dist/jquery.min.js"></script>
     <!-- ANGULAR CUSTOM -->
-    <script src="app/app.js"></script>
-    <script src="app/controllers/loginCtlr.js"></script>
-    <script src="app/controllers/registerCtlr.js"></script>
-    <script src="app/controllers/mainCtlr.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/controllers/loginCtlr.js"></script>
+    <script src="js/controllers/registerCtlr.js"></script>
+    <script src="js/controllers/mainCtlr.js"></script>
 </head>
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
@@ -30,7 +30,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#/home">OPbird</a>
+            <a ng-show="notLogged()" class="navbar-brand" href="#/dashboard">OPbird</a>
+            <a ng-hide="notLogged()" class="navbar-brand" href="#/home">OPbird</a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
