Cambio en la interfaz de login y registro v6

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     <script src="js/controllers/loginCtlr.js"></script>
     <script src="js/controllers/registerCtlr.js"></script>
     <script src="js/controllers/mainCtlr.js"></script>
+    <script src="js/services/tokens.js"></script>
 </head>
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
