--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
     <script src="js/controllers/mainCtlr.js"></script>
     <script src="js/services/tokens.js"></script>
 </head>
+<body ng-controller="mainCtrl">
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
