--- a/public/index.html
+++ b/public/index.html
@@ -21,39 +21,41 @@
     <script src="js/controllers/loginCtlr.js"></script>
     <script src="js/controllers/registerCtlr.js"></script>
     <script src="js/controllers/mainCtlr.js"></script>
+    <script src="js/controllers/dashboardCtrl.js"></script>
     <script src="js/services/tokens.js"></script>
 </head>
-<nav class="navbar navbar-inverse">
+<body>
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a ng-show="notLogged()" class="navbar-brand" href="#/dashboard">OPbird</a>
+                <a ng-hide="notLogged()" class="navbar-brand" href="#/home">OPbird</a>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav">
+                    <li ng-show="notLogged()"><a href="#">Page 1</a></li>
+                    <li ng-show="notLogged()"><a href="#">Page 2</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li ng-hide="notLogged()"><a href="#/register"><span class="glyphicon glyphicon-user"></span> Registrate</a></li>
+                    <li ng-hide="notLogged()"><a href="#/login"><span class="glyphicon glyphicon-log-in"></span> Iniciar Sesion</a></li>
+                    <li ng-show="notLogged()"><a href="#/home"><span class="glyphicon glyphicon-log-out"></span> Cerrar sesion</a></li>
+
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a ng-show="notLogged()" class="navbar-brand" href="#/dashboard">OPbird</a>
-            <a ng-hide="notLogged()" class="navbar-brand" href="#/home">OPbird</a>
-        </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
-            <ul class="nav navbar-nav">
-                <li ng-show="notLogged()"><a href="#">Page 1</a></li>
-                <li ng-show="notLogged()"><a href="#">Page 2</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li ng-hide="notLogged()"><a href="#/register"><span class="glyphicon glyphicon-user"></span> Registrate</a></li>
-                <li ng-hide="notLogged()"><a href="#/login"><span class="glyphicon glyphicon-log-in"></span> Iniciar Sesion</a></li>
-                <li ng-show="notLogged()"><a href="#/home"><span class="glyphicon glyphicon-log-out"></span> Cerrar sesion</a></li>
 
-            </ul>
-        </div>
+        <!-- ANGULAR DYNAMIC CONTENT -->
+        <div ng-view></div>
+
     </div>
-</nav>
-
-<div class="container-fluid">
-
-    <!-- ANGULAR DYNAMIC CONTENT -->
-    <div ng-view></div>
-
-</div>
 </body>
 </html>
