--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
                             <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li ng-repeat="c in Cuentas"><a href={{c.url}}>{{c.account}}</a></li>
-                            <li><a href="#">@AlexSolanas</a></li>
+                            <li><a href="#/dashboard/tweets">@AlexSolanas</a></li>
                         </ul>
                     </li>
                     <li ng-show="notLogged()"><a href="#/hashtags">Hashtags</a></li>
@@ -55,7 +55,6 @@
                     <li ng-hide="notLogged()"><a href="#/register"><span class="glyphicon glyphicon-user"></span> Registrate</a></li>
                     <li ng-hide="notLogged()"><a href="#/login"><span class="glyphicon glyphicon-log-in"></span> Iniciar Sesion</a></li>
                     <li ng-show="notLogged()" ng-click="cerrarSesion()"><a href="#/home"><span class="glyphicon glyphicon-log-out"></span> Cerrar sesion</a></li>
-
                 </ul>
             </div>
         </div>
