--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
                         <a class="dropdown-toggle" data-toggle="dropdown">Cuentas
                             <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li ng-repeat="c in Cuentas"><a href={{c.url}}>{{c.account}}</a></li>
+                            <li ng-repeat="c in accounts"><a href={{c.id_twitter}}>{{c.account}}</a></li>
                             <li><a href="#/dashboard/tweets">@AlexSolanas</a></li>
                         </ul>
                     </li>
