--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,7 @@
                         </ul>
                     </li>
                     <li ng-show="isUser()"><a href="#/hashtags">Hashtags</a></li>
+                    <li ng-show="isAdmin()"><a href="#/admin/stats">Stats</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li ng-hide="isLogged()"><a href="#/register"><span class="glyphicon glyphicon-user"></span> Registrate</a></li>
