--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,10 @@
     <script src="js/controllers/registerCtlr.js"></script>
     <script src="js/controllers/mainCtlr.js"></script>
     <script src="js/controllers/dashboardCtrl.js"></script>
+    <script src="js/controllers/adminCtrl.js"></script>
+    <script src="js/controllers/adminStatsCtrl.js"></script>
+    <script src="js/controllers/tweetCtrl.js"></script>
+
     <script src="js/services/tokens.js"></script>
 </head>
 <body ng-controller="mainCtlr">
