--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 
     <script src="js/services/tokens.js"></script>
 </head>
-<body ng-controller="mainCtlr" style="background-color: rgb(230, 237, 240);">
+<body ng-controller="mainCtlr">
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
