--- a/public/index.html
+++ b/public/index.html
@@ -27,9 +27,9 @@
     <script src="js/controllers/dashboardCtrl.js"></script>
     <script src="js/controllers/adminCtrl.js"></script>
     <script src="js/controllers/adminStatsCtrl.js"></script>
-    <script src="js/controllers/tweetCtrl.js"></script>
 
     <script src="js/services/tokens.js"></script>
+    <script src="js/directives/directive.js "></script>
 </head>
 <body ng-controller="mainCtlr">
     <nav class="navbar navbar-inverse">
