Peticion angular estadisticas

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
     <script src="libs/jquery/dist/jquery.min.js"></script>
     <script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
 
+    <!-- Chart JS -->
+    <script src="libs/Chart.js/dist/Chart.bundle.min.js"></script>
 
     <!-- ANGULAR CUSTOM -->
     <script src="js/app.js"></script>
