--- a/public/index.html
+++ b/public/index.html
@@ -12,14 +12,14 @@
     <!--<link rel="stylesheet" href="css/style.css"> <!-- custom styles -->
 
     <!-- JS -->
+    <script src="libs/jquery/dist/jquery.min.js"></script>
     <script src="libs/angular/angular.min.js"></script>
     <script src="libs/angular-route/angular-route.min.js"></script>
     <script src="libs/angular-local-storage/dist/angular-local-storage.js"></script>
-    <script src="libs/jquery/dist/jquery.min.js"></script>
     <script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <!-- Chart JS -->
-    <script src="libs/Chart.js/dist/Chart.bundle.min.js"></script>
+    <script src="libs/Chart.js/dist/Chart.bundle.js"></script>
 
     <!-- ANGULAR CUSTOM -->
     <script src="js/app.js"></script>
