Timeline hasta los huevos me muerome

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <script src="libs/angular/angular.min.js"></script>
     <script src="libs/angular-route/angular-route.min.js"></script>
     <script src="libs/angular-local-storage/dist/angular-local-storage.js"></script>
+    <script src="libs/angular-sanitize/angular-sanitize.min.js"></script>
     <script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <!-- Chart JS -->
