--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,15 @@
 
     <!-- JS -->
     <script src="libs/jquery/dist/jquery.min.js"></script>
+    <script src="libs/moment/min/moment.min.js"></script>
+    <script src="libs/bootstrap/js/transition.js"></script>
+    <script src="libs/bootstrap/js/collapse.js.js"></script>
+    <script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="libs/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
     <script src="libs/angular/angular.min.js"></script>
     <script src="libs/angular-route/angular-route.min.js"></script>
     <script src="libs/angular-local-storage/dist/angular-local-storage.js"></script>
     <script src="libs/angular-sanitize/angular-sanitize.min.js"></script>
-    <script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <!-- Chart JS -->
     <script src="libs/Chart.js/dist/Chart.bundle.js"></script>
