--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="libs/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css">
     <link rel="stylesheet" href="style/style.css">
     <!--<link rel="stylesheet" href="css/style.css"> <!-- custom styles -->
 
