--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <script src="libs/jquery/dist/jquery.min.js"></script>
     <script src="libs/moment/min/moment.min.js"></script>
     <script src="libs/bootstrap/js/transition.js"></script>
-    <script src="libs/bootstrap/js/collapse.js.js"></script>
+    <script src="libs/bootstrap/js/collapse.js"></script>
     <script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="libs/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
     <script src="libs/angular/angular.min.js"></script>
@@ -25,7 +25,8 @@
     <script src="libs/angular-sanitize/angular-sanitize.min.js"></script>
 
     <!-- Chart JS -->
-    <script src="libs/Chart.js/dist/Chart.bundle.js"></script>
+    <script src="libs/Chart.js/Chart.js"></script>
+    <script src="libs/angular-chart.js/dist/angular-chart.js"></script>
 
     <!-- ANGULAR CUSTOM -->
     <script src="js/app.js"></script>
