--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     <!-- Chart JS -->
     <script src="libs/Chart.js/Chart.js"></script>
     <script src="libs/angular-chart.js/dist/angular-chart.js"></script>
+    <link rel="stylesheet" href="libs/angular-chart.js/dist/angular-chart.css">
 
     <!-- ANGULAR CUSTOM -->
     <script src="js/app.js"></script>
