--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="libs/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="libs/angular-xeditable/dist/css/xeditable.min.css">
+
     <!--<link rel="stylesheet" href="css/style.css"> <!-- custom styles -->
 
     <!-- JS -->
@@ -23,6 +25,8 @@
     <script src="libs/angular-route/angular-route.min.js"></script>
     <script src="libs/angular-local-storage/dist/angular-local-storage.js"></script>
     <script src="libs/angular-sanitize/angular-sanitize.min.js"></script>
+    <script src="libs/angular-xeditable/dist/js/xeditable.min.js"></script>
+
 
     <!-- Chart JS -->
     <script src="libs/Chart.js/Chart.js"></script>
