--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     <script src="libs/angular-local-storage/dist/angular-local-storage.js"></script>
     <script src="libs/angular-sanitize/angular-sanitize.min.js"></script>
     <script src="libs/angular-xeditable/dist/js/xeditable.min.js"></script>
+    <script src="libs/angular-animate/angular-animate.min.js"></script>
 
 
     <!-- Chart JS -->
