Inicio de los hastags

--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,7 @@
     <script src="js/controllers/adminCtrl.js"></script>
     <script src="js/controllers/adminStatsCtrl.js"></script>
     <script src="js/controllers/perfilCtlr.js"></script>
+    <script src="js/controllers/hashtagsCtlr.js"></script>
 
 
     <script src="js/services/tokens.js"></script>
