Estadisticas por usuario

--- a/public/index.html
+++ b/public/index.html
@@ -44,9 +44,11 @@
     <script src="js/controllers/adminStatsCtrl.js"></script>
     <script src="js/controllers/perfilCtlr.js"></script>
     <script src="js/controllers/hashtagsCtlr.js"></script>
+    <script src="js/controllers/perfilStatsCtrl.js"></script>
 
 
     <script src="js/services/tokens.js"></script>
+    <script src="js/services/emails.js"></script>
     <script src="js/directives/directive.js "></script>
 </head>
 <body ng-controller="mainCtlr">
